[package]
name = "victoria-dom"
version = "0.1.2" # remember to update html_root_url
authors = ["Aleksandr Orlenko <zxteam@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/khvzak/victoria-dom"
documentation = "https://docs.rs/victoria-dom"
homepage = "https://github.com/khvzak/victoria-dom"
description = """
Minimalistic HTML parser with CSS selectors
"""
categories = ["parsing"]
keywords = ["html", "css", "parser"]

[dependencies]
regex = "1.0"
lazy_static = "1.0"
maplit = "1.0"
